<resources>
    <string name="app_name">RatingSystem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="masukkan_password_anda">Masukkan Password Anda</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="masukkan_email_baru">Masukkan Email Baru</string>
    <string name="new_email">New Email</string>
    <string name="update">Update</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="save">Save</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here">Already have an account login here</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="Pekerjaan">Pekerjaan</string>
    <string name="Agama">Agama</string>
    <string name="StatusPerkawinan">Status Perkawinan</string>
    <string name="Alamat">Alamat</string>
    <string name="JenisKelamin">Jenis Kelamin</string>
    <string name="search">Cari</string>
    <string name="Publik">SuaraNusantara</string>
    <string name="Rating">RatingSystem</string>
    <string name="id">9101012504000006</string>
    <string name="user_name">KelurahanA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Jam">Jam Buka</string>
    <string name="waktu">7 pagi - 5 sore</string>
</resources>