<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/information_box"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_avatar"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iconQrCode"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/img_item_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_userName"
        app:srcCompat="@drawable/qrcode"
        android:contentDescription="@string/Alamat" />

    <TextView
        android:id="@+id/tv_item_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/img_item_avatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/tv_item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/iconQrCode"
        app:layout_constraintTop_toBottomOf="@id/tv_item_userName"
        tools:text="@string/id"/>
    
    
</androidx.constraintlayout.widget.ConstraintLayout>