<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/masukkan_nama"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="textEmailAddress"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="phone"
                android:text="@string/phone"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/Accent"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/etPhone"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@+id/etPhone"
                app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

            <ImageView
                android:id="@+id/icVerified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_verified_user_24"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/etEmail"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <ImageView
                android:id="@+id/icUnverified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_unverified_user_24"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/etEmail"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <TextView
                android:id="@+id/tvChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Change Password"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/etPhone"
                app:layout_constraintStart_toStartOf="@+id/etPhone"
                app:layout_constraintTop_toBottomOf="@+id/etPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>